[package]
name = "indexed_map"
version = "0.1.0"
authors = ["Cameron Phillips <cameron0505@gmail.com>"]
edition = "2018"
description = "HashMap wrapper where each value corresponds to a uniquely generated usize key."
license = "MIT"
repository = "https://github.com/cameronp98/indexed-map"
readme = "README.md"
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
